--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		<title> Welcome </title>
 	</head>
 <body>
+	<h1> Welcome </h1>
 	<h3> Please enter your name </h3>
 	<input type="text" name="uname" >
 </body>
