--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title> Welcome </title>
 	</head>
 <body>
-	<h3> Please enter your name </h3>
+	<h3> Please enter your  </h3>
 	<input type="text" name="uname" >
 </body>
 </html>
