--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 	<head>
-		<title> Welcome - about01</title>
+		<title> Welcome - POC Azure WebApp /title>
 	</head>
 <body>
+	<h1> Azure Static Website!!! </h1>
 	<h3> Please enter your  </h3>
 	<input type="text" name="uname" >
 </body>
