Correct Header Tag

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title> Welcome - POC Azure WebApp /title>
+		<title> Welcome - POC Azure WebApp </title>
 	</head>
 <body>
 	<h1> Azure Static Website!!! </h1>
