--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title> Welcome - POC Azure WebApp </title>
 	</head>
 <body>
-	<h1> Azure Static Website!!! </h1>
+	<h1> !!! Azure Static Website !!! </h1>
 	<h3> Please enter your  </h3>
 	<input type="text" name="uname" >
 </body>
