--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title> Welcome - CDM Test Revier App </title>
+		<title> Welcome - CDM Test Reviewer App </title>
 	</head>
 <body>
 	<h1> !!! Azure Static Website !!! </h1>
